- [add] options to show/hide major/minor grid lines in Setup->Appearance->RX Display
- [add] option to show two tone measurements in the linearity form. Note: suitable spectrum scale etc required. Code attempts to find peaks at expected locations
- [add] added fft size display to the rx display settings
- [add] PSForm tooltips now used in finder
- [add] custom waterfall palette added - gradient adjustment in rx appearance - also supported in the filter item
- [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
- [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
- [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; . There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
- [change] refactor serial port pin change detection code for slight performance improvements
- [change] display vsync defaulted to on for new databases. I would advise turning this on if not already
- [change] all RX display offsets are now done in one place in the code
- [change] TX-ATT label has been changed to [S-ATT]
- [change] spectrum gradient change. Now -150 to +10 dBm.  NOTE: all gradients will need to be adjusted
- [fix] mic disable/enable button on front end will now disable the mic at startup if set as off. Note: its state is saved as part of the tx profile
- [fix] fixed rare out of bounds issue in memory ScheduleUpdate
- [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
- [fix] mode buttons when in collapsed mode should now work again when Thetis is first launched