@@ -17,7 +17,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] option to show two tone measurements in the linearity form. Note: suitable spectrum scale etc required. Code attempts to find peaks at expected locations
 - [add] added fft size display to the rx display settings
 - [add] PSForm tooltips now used in finder
-- [add] custom waterfall palette added - gradient adjustment in rx appearance - also supported in the filter item
+- [add] custom waterfall palette added for each RX. Adjust in Appearance->General. Also supported by the filter item
 - [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
 - [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
 - [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; . There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
@@ -45,7 +45,8 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] when adcs were linked, unwinding of adc overload attenuation did not always return to original att
 - [fix] PS SetPk reset if user selects different radio model
 - [fix] rx2 sql thumb control now aligns with signal displayed below
-- [fix] VAC2 on/off state is recovered from the TX profile when rx2 is enabled 
+- [fix] VAC2 on/off state is recovered from the TX profile when rx2 is enabled
+- [fix] pulse on waterfall has been minimised when using NF compensation with the waterfall AGC
 
 ## v2.10.3.8 - Change Log
 - [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
